[package]
name = "jsonwebtokens-cognito"
version = "0.2.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
edition = "2018"
repository = "https://github.com/rib/jsonwebtokens-cognito"
documentation = "https://docs.rs/jsonwebtokens-cognito/"
readme = "README.md"
license = "MIT"
keywords = ["jwt", "jwk", "jwks", "token", "cognito"]
categories = ["authentication"]
description = "Decodes and verifies Json Web Tokens issued by AWS Cognito"

[dependencies]
jsonwebtokens = "1"
reqwest = { version = "0.11", features=["json", "rustls-tls"] }
serde = { version="1", features=["derive"] }
serde_json = "1"

[dev-dependencies]
async-std = { version = "1", features = [ "attributes" ] }
